@@ -1,6 +1,6 @@
 Package: robustbase
-Version: 0.4-3
-Date: 2008-08-29
+Version: 0.4-4
+Date: 2008-10-..
 Title: Basic Robust Statistics
 Author: Original code by many authors, notably
 	Peter Rousseeuw and Christophe Croux, see file 'Copyrights';
