@@ -1,3 +1,8 @@
+2008-10-15  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/lmrob.MM.R (lmrob.S): fix error message s/larger/smaller/
+	thanks to Keith Ponting.
+
 2008-10-01  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* src/wgt_himed_templ.h: fix leading comment
